Update Starter for Student